RELEASE 0.5a - Thu, 15 Dec 2016
 - use Detect() instead of WhereIs() to detect gnuplot
 - fix typo 'BUILDER' -> 'BUILDERS' in gnuplot/__init__.py
RELEASE 0.4a - Sat, 22 Feb 2014
 - Use curl instead of hg to download dependencies.
 - Download testing framework from main scons repository. The dirkbachle's one
   gone away.
RELEASE 0.3a - Tue, 23 Apr 2013
 - Fixed bug with incorrect order of targets returned by emitter (github issue
   #2).
 - Revised user manual and tests to reflect the interface change (chdir ->
   gp_chdir) - see below.
 - Fixed possible bug, where the usage of SCons built-in chdir parameter could
   broke parallel builds (the -j flags). We now use our own 'gp_chdir' keyword
   parameter instead of SCons built-in 'chdir' parameter.
RELEASE 0.2a - Mon, 15 Apr 2013
 - Revised user manual
 - GplotGraph converted from pseudo-builder to true builder
RELEASE 0.1a - Sat, 13 Apr 2013
 - Initial release.